logovanie, zmena dto